--- a/package.json
+++ b/package.json
@@ -6,13 +6,23 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "server": "json-server -p3000 --watch db.json"
   },
   "dependencies": {
-    "expo": "~52.0.46",
-    "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.9"
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
+    "@react-navigation/stack": "^7.2.10",
+    "axios": "^1.9.0",
+    "expo": "^53.0.7",
+    "expo-camera": "~16.1.6",
+    "expo-status-bar": "~2.2.3",
+    "json-server": "^0.17.4",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-paper": "^5.13.5",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
