--- a/app.json
+++ b/app.json
@@ -3,14 +3,18 @@
     "name": "VerificadorApp",
     "slug": "VerificadorApp",
     "version": "1.0.0",
-    "orientation": "default",
+    "orientation": "landscape",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
+    "androidNavigationBar": {
+      "visible": "sticky-immersive"
+    },
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
+    
     },
     "ios": {
       "supportsTablet": true
