--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-native": "0.79.2",
     "react-native-paper": "^5.13.5",
     "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "^4.10.0"
+    "react-native-screens": "^4.10.0",
+    "expo-system-ui": "~5.0.7",
+    "expo-navigation-bar": "~4.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
